# opc

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/opc-agents/: Cargo.toml
crates/opc-agents/src/: adapter.rs  claude_code.rs  heartbeat.rs  http_adapter.rs  lib.rs  openclaw.rs  session.rs
crates/opc-cli/: Cargo.toml
crates/opc-cli/src/: main.rs
crates/opc-core/: Cargo.toml
crates/opc-core/src/: events.rs  lib.rs
crates/opc-core/src/domain/: agent.rs  approval.rs  event.rs  issue.rs  mod.rs  project.rs
crates/opc-core/src/services/: agent_service.rs  approval_service.rs  cost_service.rs  heartbeat_service.rs  issue_service.rs  mod.rs
crates/opc-db/: Cargo.toml
crates/opc-db/src/: embedded.rs  lib.rs  migrate.rs
crates/opc-db/src/queries/: activity_log.rs  agents.rs  approvals.rs  comments.rs  companies.rs  cost_events.rs  heartbeats.rs  issues.rs  mod.rs  project_updates.rs  projects.rs  users.rs
crates/opc-server/: Cargo.toml
crates/opc-server/src/: error.rs  lib.rs  main.rs  middleware.rs  sse.rs  state.rs
crates/opc-server/src/routes/: agents.rs  approvals.rs  auth.rs  comments.rs  health.rs  heartbeat.rs  issues.rs  mod.rs  pages.rs  projects.rs
crates/opc-server/templates/: base.html  dashboard.html  login.html
crates/opc-server/templates/agents/: detail.html  list.html  new.html
crates/opc-server/templates/approvals/: detail.html  list.html
crates/opc-server/templates/components/: sidebar.html
crates/opc-server/templates/issues/: detail.html  list.html  new.html
crates/opc-server/templates/projects/: detail.html  list.html
crates/opc-server/tests/: dag_workflow.rs
migrations/: 001_initial.sql  002_add_openclaw_adapter.sql  003_add_reassigned_approval_status.sql  004_add_issue_repo_url.sql  005_move_repo_url_to_projects.sql  006_project_approval_and_updates.sql  007_issue_dependencies.sql
skills/planning/: SKILL.md
static/: style.css
