[package]
name = "opc-agents"
version.workspace = true
edition.workspace = true

[dependencies]
opc-core = { workspace = true }
opc-db = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
