[package]
name = "opc-db"
version.workspace = true
edition.workspace = true

[dependencies]
opc-core = { workspace = true }
sqlx = { workspace = true }
pg-embed = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs-next = { workspace = true }
