[package]
name = "opc-server"
version.workspace = true
edition.workspace = true

[dependencies]
opc-core = { workspace = true }
opc-db = { workspace = true }
opc-agents = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
askama = { workspace = true }
askama_axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
argon2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
